@@ -1,6 +1,7 @@
 2022-06-07  Alex Kotov  <kotovalexarian@gmail.com>
 
 	* include/kernaux/libc.h: Has been split into separate headers
+	* include/kernaux/print.h: Functions "[v]printf" renamed to "[v]fprintf"
 
 2022-06-06  Alex Kotov  <kotovalexarian@gmail.com>
 
